--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,10 @@ jobs:
           ${{ runner.os }}-maven-
 
     - name: Build with Maven
-      run: mvn clean package -DskipTests
+      run: |
+        mvn clean package -DskipTests
+        echo "Listing files in the target directory:"
+        ls -la target/
 
     - name: Upload JAR Artifact
       uses: actions/upload-artifact@v3
@@ -51,13 +54,13 @@ jobs:
 
     - name: Verify Artifact Existence
       run: |
-        echo "Listing files in the target directory:"
-        ls -la target/
+        echo "Listing files in the downloaded artifact directory:"
+        ls -la
 
     - name: Create Archive (tar)
       run: |
         echo "Creating tar archive..."
-        tar -czvf /tmp/spring-boot-app.tar.gz -C target .
+        tar -czvf /tmp/spring-boot-app.tar.gz -C target app.jar
 
     - name: Deploy to DigitalOcean Droplet
       uses: appleboy/scp-action@v0.1.6
