--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   build:
@@ -31,10 +28,7 @@ jobs:
           ${{ runner.os }}-maven-
 
     - name: Build with Maven
-      run: |
-        mvn clean package -DskipTests
-        echo "Listing files in the target directory:"
-        ls -la target/
+      run: mvn clean package -DskipTests
 
     - name: Upload JAR Artifact
       uses: actions/upload-artifact@v3
@@ -52,34 +46,21 @@ jobs:
       with:
         name: spring-boot-app
 
-    - name: Verify Artifact Existence
-      run: |
-        echo "Listing files in the downloaded artifact directory:"
-        ls -la
-
-    - name: Create Archive (tar)
-      run: |
-        echo "Creating tar archive..."
-        tar -czvf /tmp/spring-boot-app.tar.gz -C target app.jar
-
     - name: Deploy to DigitalOcean Droplet
       uses: appleboy/scp-action@v0.1.6
       with:
         host: ${{ secrets.DO_DROPLET_IP }}
         username: ${{ secrets.DO_DROPLET_USER }}
         key: ${{ secrets.DO_PRIVATE_KEY }}
-        source: /tmp/spring-boot-app.tar.gz
-        target: /home/${{ secrets.DO_DROPLET_USER }}/app.tar.gz
+        source: target/*.jar
+        target: /home/${{ secrets.DO_DROPLET_USER }}/app.jar
 
-    - name: Extract and Start Application on Droplet
+    - name: SSH and Start Application on Droplet
       uses: appleboy/ssh-action@v0.1.6
       with:
         host: ${{ secrets.DO_DROPLET_IP }}
         username: ${{ secrets.DO_DROPLET_USER }}
         key: ${{ secrets.DO_PRIVATE_KEY }}
         script: |
-          echo "Extracting archive..."
-          tar -xzvf /home/${{ secrets.DO_DROPLET_USER }}/app.tar.gz -C /home/${{ secrets.DO_DROPLET_USER }}/
-          echo "Starting the application..."
-          pkill -f 'java -jar app.jar' || true
+          pkill -f 'java -jar' || true
           nohup java -jar /home/${{ secrets.DO_DROPLET_USER }}/app.jar > app.log 2>&1 &
