--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,66 +1,23 @@
-name: CI/CD Pipeline for Spring Boot
+kind: pipeline
+name: default
 
-on:
-  push:
-    branches:
-      - main
+steps:
+- name: Build and Package Application
+image: maven:3.8.6-openjdk-17
+commands:
+- mvn clean package -DskipTests
+- echo "Listing files in target directory"
+- ls -la target/
+artifacts:
+- target/*.jar
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3
-
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: '17'
-
-    - name: Cache Maven dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-
-    - name: Build with Maven
-      run: mvn clean package -DskipTests
-
-    - name: Upload JAR Artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: spring-boot-app
-        path: target/*.jar
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-    - name: Download JAR Artifact
-      uses: actions/download-artifact@v3
-      with:
-        name: spring-boot-app
-
-    - name: Deploy to DigitalOcean Droplet
-      uses: appleboy/scp-action@v0.1.6
-      with:
-        host: ${{ secrets.DO_DROPLET_IP }}
-        username: ${{ secrets.DO_DROPLET_USER }}
-        key: ${{ secrets.DO_PRIVATE_KEY }}
-        source: target/*.jar
-        target: /home/${{ secrets.DO_DROPLET_USER }}/app.jar
-
-    - name: SSH and Start Application on Droplet
-      uses: appleboy/ssh-action@v0.1.6
-      with:
-        host: ${{ secrets.DO_DROPLET_IP }}
-        username: ${{ secrets.DO_DROPLET_USER }}
-        key: ${{ secrets.DO_PRIVATE_KEY }}
-        script: |
-          pkill -f 'java -jar' || true
-          nohup java -jar /home/${{ secrets.DO_DROPLET_USER }}/app.jar > app.log 2>&1 &
+- name: Copy Files to Server
+image: appleboy/drone-scp
+settings:
+host: ${DO_DROPLET_IP} # Using secret for host
+username: ${DO_DROPLET_USER} # Using secret for username
+key: ${DO_PRIVATE_KEY} # Using secret for private key
+source: "target/*.jar" # Ensure the file exists and matches the path
+target: "/path/to/target/directory/"
+when:
+status: success
