--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=api
 
 # Database configuration
-spring.datasource.url=jdbc:mysql://doadmin:AVNS_F-4iRSk-F4jtKHKtx6b@dbaas-db-10418050-do-user-15798806-0.l.db.ondigitalocean.com:25060/defaultdb?ssl-mode=REQUIRED
-spring.datasource.username=doadmin
-spring.datasource.password=AVNS_F-4iRSk-F4jtKHKtx6b
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=none
